# shf

./: .commitlintrc.yml  .gitignore  Cargo.toml  build.rs  readme.md  test_config.toml
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/: FileListView.svelte  Header.svelte  protocol.ts  socket.ts  utils.ts
frontend/src/lib/filetypes/: Directory.svelte  File.svelte  Symlink.svelte
frontend/src/lib/types/: communication.types.ts  query.types.ts
frontend/src/routes/: +page.svelte
src/: bundle.rs  main.rs  routes.rs  websocket.rs
src/filesystem/: mod.rs  query.rs  video.rs
src/messages/: handlers.rs  types.rs
src/permissions/: data.rs  entries.rs  load.rs  mod.rs
