[package]
name = "shf"
version = "0.1.0"
edition = "2021"

[profile.release]
# Automatically strip symbols from the binary
strip = true
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }

serde = { version = "1.0.215", features = ["derive"] }
rmp-serde = "1.3"

tokio = { version = "1.41.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }

lazy_static = "1.5.0"
futures-util = "0.3.31"
serde_repr = "0.1"

include_dir = "0.7"
mime_guess = "2.0"
time = "0.3"
